--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -13,7 +13,6 @@ body {
 	font size: 16px; /*1em = 16px*/
 	color: #030b11;
 	line-height: 1.5;
-	background-image: url("../images/Background.jpg");
 	background-size: cover;
 }
 
@@ -116,3 +115,36 @@ h4 {
 section {
 	text-align: center;
 }
+
+header {
+    background-color: #FFED74;
+    border: 1px black solid;
+    padding: 20px;
+}
+
+nav {
+    background-color: #E8C66A;
+    border: 1px black solid;
+    padding: 20px;
+}
+
+article {
+    background-color: #E89C6C;
+    border: 1px black solid;
+    padding: 20px;
+}
+
+footer {
+    background-color: #FF957E;
+    border: 1px black solid;
+    padding: 20px;
+}
+
+div {
+    background-color: #FFE2B8;
+    border: 1px black solid;
+    padding: 20px;
+}
+
+
+
