--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -8,10 +8,6 @@
 	box-sizing:border-box;
 }
 
-* { 
-	border: 1px solid black; 
-}
-
 body {
 	font-family: adobe-garamond-pro, serif;
 	font size: 16px; /*1em = 16px*/
@@ -118,12 +114,17 @@ h4 {
 	font-size: 20px;
 }
 
+section {
+	text-align: center;
+}
 
 @media screen and (max-width:800px){
 
 	.james {
-		width: 50%
+		width: 50%;
+		margin: 0 auto;
 	}
+}
 
 @media screen and (max-width:650px){
 
@@ -138,5 +139,5 @@ h4 {
 	nav {
 		padding: 7px
 	}
-
+}
 
